Agrego el uso de populate al GET cart de views

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,15 +1,14 @@
 <h1>{{title}}</h1>
 <div class="cart">
-  <h2>Carrito ID: {{oneCart.id}}</h2>
+  <h2>ID del carrito: {{oneCart.id}}</h2>
 
   {{#if oneCart.products.length}}
     <div class="products">
       {{#each oneCart.products}}
         <div class="product-item">
-          <h3>{{this.name}}</h3>
+          <h3>{{this.name}} - {{this.productId}}</h3>
           <p>Precio: ${{this.price}}</p>
           <p>Cantidad: {{this.quantity}}</p>
-          <p>Product ID: {{this.productId}}</p>
         </div>
       {{/each}}
     </div>
