--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>{{title}}</h1>
 
 {{#each carts}}
@@ -19,3 +20,6 @@
     {{/if}}
   </div>
 {{/each}}
+</div>
+
+<script src="/js/carts.js"></script>
