--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,4 +1,4 @@
-<div class="products-container">
+<div class="container">
   <h1>Productos encontrados: {{pagination.totalProducts}}</h1>
 
   <table class="products-table">
@@ -38,9 +38,14 @@
 
 
   <div>
-    <p>Cantidad de productos en el carrito: </p>
-  <button class="send-btn">Enviar carrito</button>
+    <p>Cantidad total de productos en el carrito: <span id="cart-count">0</span></p>
+    {{#each cart}}
+    <p>{{products.name}} - ({{quantity}})</p>
+    {{/each}}
+    <button id="send-btn">Enviar carrito</button>
   </div>
+
+  <a href="http://localhost:8080/api/v1/views/carts">Ver todos los carritos</a>
 </div>
 
 
