--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,14 +2,21 @@
   font-family: Verdana;
 }
 
-.container{
-    margin-inline: 50px;
+.container {
+  margin-inline: 50px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 0;
 }
 
 table {
   font-size: 14px;
   border-collapse: collapse;
   width: 100%;
+  margin-top: 30px;
 }
 
 td,
@@ -26,8 +33,116 @@ tbody tr:nth-child(2n) {
 th {
   background-color: #333;
   color: white;
+  text-align: center;
 }
 
-.pagination{
-    margin-block: 20px;
+.pagination {
+  margin-block: 20px;
+}
+
+.nav-link {
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  background-color: rgb(99, 99, 221);
+  padding-block: 10px;
+  padding-inline: 15px;
+  border-radius: 10px;
+  margin-block: 20px;
+}
+
+.cart {
+  width: 410px;
+  border: 1px solid black;
+  border-radius: 16px;
+  padding: 16px;
+  padding-top: 0;
+  margin: 16px;
+}
+
+.products {
+  h4 {
+    margin-bottom: 0;
+  }
+}
+
+.product-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.line {
+  height: 1px;
+  background-color: black;
+}
+
+.cart-actions {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 16px;
+}
+
+.container-d {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart-d {
+  width: 500px;
+  border: 1px solid black;
+  border-radius: 16px;
+  padding: 16px;
+  padding-top: 0;
+  margin-block: 50px;
+}
+.product-item-d {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.detail {
+  display: flex;
+  justify-content: space-between;
+  width: 350px;
+}
+
+.add-btn,
+#send-btn {
+  background-color: rgb(32, 204, 9);
+  color: white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  padding-inline: 10px;
+  padding-block: 7px;
+  cursor: pointer;
+}
+
+.delete-cart-btn,
+.delete-btn {
+  background-color: red;
+  color: white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  padding-inline: 10px;
+  padding-block: 7px;
+  cursor: pointer;
+}
+
+.cart-details {
+  text-decoration: none;
+  background-color: rgb(0, 153, 255);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding-inline: 10px;
+  padding-block: 7px;
+}
+
+.table-actions{
+  display: flex;
+  justify-content: space-evenly;
 }
